--- a/deployments/coffee-service-v2.yaml
+++ b/deployments/coffee-service-v2.yaml
@@ -1,49 +1,29 @@
-# apiVersion: consul.hashicorp.com/v1alpha1
-# kind: ServiceDefaults
-# metadata:
-#   name: coffee-service
-# spec:
-#   protocol: "http"
-# ---
-# # Service to expose coffee-service
-
-# apiVersion: v1
-# kind: Service
-# metadata:
-#   name: coffee-service
-# spec:
-#   selector:
-#     app: coffee-service
-#   ports:
-#     - name: http
-#       protocol: TCP
-#       port: 9090
-#       targetPort: 9090
-
-# ---
-
-# apiVersion: v1
-# kind: ServiceAccount
-# metadata:
-#   name: coffee-service
-# automountServiceAccountToken: true
-
-# ---
-apiVersion: v1
-kind: ConfigMap
+apiVersion: consul.hashicorp.com/v1alpha1
+kind: ServiceDefaults
 metadata:
-  name: db-configmap
-data:
-  config: |
-    {
-      "db_connection": "host=localhost port=5432 user=postgres password=password dbname=products sslmode=disable",
-      "bind_address": ":9090",
-      "metrics_address": ":9103"
-    }
-
+  name: coffee-service
+spec:
+  protocol: "http"
 ---
-# Coffee service
-
+apiVersion: v1
+kind: Service
+metadata:
+  name: coffee-service
+spec:
+  selector:
+    app: coffee-service
+  ports:
+    - name: http
+      protocol: TCP
+      port: 9090
+      targetPort: 9090
+---
+apiVersion: v1
+kind: ServiceAccount
+metadata:
+  name: coffee-service
+automountServiceAccountToken: true
+---
 apiVersion: apps/v1
 kind: Deployment
 metadata:
@@ -67,13 +47,6 @@ spec:
         consul.hashicorp.com/connect-service-upstreams: "postgres:5432"
     spec:
       serviceAccountName: coffee-service
-      volumes:
-      - name: config
-        configMap:
-          name: db-configmap
-          items:
-          - key: config
-            path: conf.json
       containers:
         - name: coffee-service
           image: hashicorpdemoapp/coffee-service:v0.0.1
@@ -81,9 +54,21 @@ spec:
             - containerPort: 9090
             - containerPort: 9103
           env:
-            - name: "CONFIG_FILE"
-              value: "/config/conf.json"
-            - name: "API_VERSION"
+            - name: "USERNAME"
+              value: "postgres"
+            - name: "PASSWORD"
+              value: "password"
+            - name: "LOG_FORMAT"
+              value: "text"
+            - name: "LOG_LEVEL"
+              value: "INFO"
+            - name: "BIND_ADDRESS"
+              value: "localhost:9090"
+            - name: "METRICS_ADDRESS"
+              value: "localhost:9103"
+            - name: "DB_TRACE_ENABLED"
+              value: "true"
+            - name: "VERSION"
               value: "v2"
           livenessProbe:
             httpGet:
@@ -93,7 +78,3 @@ spec:
             timeoutSeconds: 1
             periodSeconds: 10
             failureThreshold: 30
-          volumeMounts:
-            - name: config
-              mountPath: /config
-              readOnly: true
