--- a/deployments/coffee-service-v3.yaml
+++ b/deployments/coffee-service-v3.yaml
@@ -1,36 +1,22 @@
-# apiVersion: consul.hashicorp.com/v1alpha1
-# kind: ServiceDefaults
-# metadata:
-#   name: coffee-service
-# spec:
-#   protocol: "http"
-# ---
-# # Service to expose coffee-service
-
-# apiVersion: v1
-# kind: Service
-# metadata:
-#   name: coffee-service
-# spec:
-#   selector:
-#     app: coffee-service
-#   ports:
-#     - name: http
-#       protocol: TCP
-#       port: 9090
-#       targetPort: 9090
-
-# ---
-
-# apiVersion: v1
-# kind: ServiceAccount
-# metadata:
-#   name: coffee-service
-# automountServiceAccountToken: true
-
-# ---
-# Coffee service
-
+apiVersion: v1
+kind: Service
+metadata:
+  name: coffee-service
+spec:
+  selector:
+    app: coffee-service
+  ports:
+    - name: http
+      protocol: TCP
+      port: 9090
+      targetPort: 9090
+---
+apiVersion: v1
+kind: ServiceAccount
+metadata:
+  name: coffee-service
+automountServiceAccountToken: true
+---
 apiVersion: apps/v1
 kind: Deployment
 metadata:
@@ -60,7 +46,15 @@ spec:
             - containerPort: 9090
             - containerPort: 9103
           env:
-            - name: "API_VERSION"
+            - name: "LOG_FORMAT"
+              value: "text"
+            - name: "LOG_LEVEL"
+              value: "INFO"
+            - name: "BIND_ADDRESS"
+              value: "localhost:9090"
+            - name: "METRICS_ADDRESS"
+              value: "localhost:9103"
+            - name: "VERSION"
               value: "v3"
           livenessProbe:
             httpGet:
